# sts2-rl

./: .gitignore  AGENTS.md  README.md  README_UNIFIED.md  backtest_hotfix_small_20260410.json  execution_report_20260410_2002.txt  execution_report_20260410_2124.txt  execution_report_20260410_2238.txt  execution_report_20260411_0019.txt  execution_report_20260411_0132.txt  ppo_http_cli_rl.config.json  pyproject.toml  requirements.txt  seeds_hotfix_20260410.txt  setup.py  snapshot_tmp.json  tmp_act1_boss_fail_24_20260423.txt  tmp_act1_boss_fail_from_focused_iter6_20260426.txt  tmp_act1_boss_smoke_3_20260424.txt  tmp_act2_attempt25_from_focus80_20260423.txt  tmp_act2_boss_elite_fail_focus_20260423.txt  tmp_act2_boss_elite_fail_focus_48_20260423.txt  tmp_act2_crusher6_20260423.txt  tmp_act2_fail13_replay_ge34_20260423.txt  tmp_act2_fail_from_run_20260423_185049.txt  tmp_act2_gate_focus_60_20260423.txt  tmp_act2_gate_focus_80_20260423.txt  tmp_bench20_20260426.txt  tmp_bench8_20260426.txt  tmp_boss_fail_focus_from_training_20260423.txt  tmp_ceremonial20_20260430.txt  tmp_ceremonial40_20260430.txt  tmp_ceremonial80_20260430.txt  tmp_ceremonial_attempt_20260430.txt  tmp_crusher_rocket_focus_20260423.txt  tmp_determinism_after_fix_a.json  tmp_determinism_after_fix_b.json  tmp_determinism_probe_a.json  tmp_determinism_probe_b.json  tmp_determinism_probe_slot4.json  (+42 more)
configs/: finetune.yaml  runtime_stack.json  runtime_stack.local.example.json  train_headless.yaml  train_http_cli_rl.yaml  train_ui.yaml
examples/: manual_test.py  quick_start.py  random_agent.py  test_cli_game.py  (+6 more)
(+61 files in other folders)
